salesforce/force-app/main/default/objects/MaxDoot_Config__mdt/MaxDoot_Config__mdt.object-meta.xml
<CustomObject>
    <label>MaxDoot Config</label>
    <pluralLabel>MaxDoot Config</pluralLabel>
    <description>Configuration for the heydoot integration: endpoint path templates and the inbound webhook shared token. Base URL and auth live in the Named Credential.</description>
</CustomObject>