salesforce/force-app/main/default/objects/MaxDoot_Config__mdt/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <label>API Key</label>
    <description>Bearer token / API key presented to heydoot on outbound callouts. NOTE: stored in protected metadata as a stopgap; migrate to a Named/External Credential principal for production.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>