salesforce/force-app/main/default/objects/MaxDoot_Config__mdt/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company Name</label>
    <description>Brand/company name shown in the MaxDoot About panel.</description>
    <type>Text</type>
    <length>120</length>
</CustomField>