salesforce/force-app/main/default/objects/MaxDoot_Config__mdt/fields/Inbound_Token__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Token__c</fullName>
    <label>Inbound Token</label>
    <description>Shared secret heydoot must present in the X-MaxDoot-Token header on inbound webhooks.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>