salesforce/force-app/main/default/objects/MaxDoot_Config__mdt/fields/QR_Path__c.field-meta.xml
<CustomField>
    <fullName>QR_Path__c</fullName>
    <label>QR Path</label>
    <description>Path template returning the login QR for a channel. {channelId} is substituted.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>