salesforce/force-app/main/default/objects/MaxDoot_Config__mdt/fields/Send_Path__c.field-meta.xml
<CustomField>
    <fullName>Send_Path__c</fullName>
    <label>Send Path</label>
    <description>Path template for sending a message. {channelId} is substituted. Appended to the heydoot Named Credential base URL.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>