salesforce/force-app/main/default/objects/MaxDoot_Config__mdt/fields/Status_Path__c.field-meta.xml
<CustomField>
    <fullName>Status_Path__c</fullName>
    <label>Status Path</label>
    <description>Path template returning the session status for a channel. {channelId} is substituted.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>