salesforce/force-app/main/default/objects/MaxDoot_Config__mdt/fields/Support_Email__c.field-meta.xml
<CustomField>
    <fullName>Support_Email__c</fullName>
    <label>Support Email</label>
    <description>Contact Us email address shown in the About panel.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>