salesforce/force-app/main/default/objects/MaxDoot_Config__mdt/fields/Support_Phone__c.field-meta.xml
<CustomField>
    <fullName>Support_Phone__c</fullName>
    <label>Support Phone</label>
    <description>Contact Us phone number shown in the About panel.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>