salesforce/force-app/main/default/objects/MaxDoot_Config__mdt/fields/Support_URL__c.field-meta.xml
<CustomField>
    <fullName>Support_URL__c</fullName>
    <label>Support URL</label>
    <description>Contact Us / website link shown in the About panel.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>