salesforce/force-app/main/default/objects/MaxDoot_Config__mdt/fields/Tagline__c.field-meta.xml
<CustomField>
    <fullName>Tagline__c</fullName>
    <label>Tagline</label>
    <description>Short product tagline shown under the brand name.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>